# cbsoup

./: .clang-format  .gitignore  MANIFEST.in  bench_scrape.py  checklist.txt  readme.md  setup.cfg  setup.py
gumbo/: gumbo.h  tag_enum.h
pywebcopy/: __init__.py  __main__.py  __version__.py  compat.py  configs.py  core.py  elements.py  helpers.py  meta.py  parsers.py  schedulers.py  session.py  urls.py
pywebcopy.egg-info/: PKG-INFO  SOURCES.txt
pywebcopy/tests/: test_configs.py  test_elements.py  test_helpers.py  test_iterparser.py  test_scheduler.py  test_urls.py
src/: as-libxml.c  as-libxml.h  as-python-tree.c  as-python-tree.h  attr_enum.h  attr_perf.h  attr_sizes.h  attr_strings.h  data-types.h  python-wrapper.c  stack.h
src/html5_parser/: __init__.py  dom.py  encoding_names.py  encoding_parser.py  soup.py  stdlib_etree.py
