[metadata]
name = cbsoup
version = 0.0.1

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where = src

[tool:setuptools.extension]
html5_parser.html_parser =
    sources =
        src/python-wrapper.c,
        src/as-python-tree.c,
        src/as-libxml.c
    include-dirs =
        src,
        src/gumbo,
        /opt/homebrew/opt/libxml2/include/libxml2
    libraries = xml2
    library-dirs =
        /opt/homebrew/opt/libxml2/lib
    extra-compile-args =
        -O3,
        -std=c11,
        -Wall,
        -Wextra,
        -Wno-unused-parameter
